[CRD iOS] Fix crash for executing OpenGL commands when app goes to the background

iOS doesn't allow app executing OpenGL commands after it goes to the
background. Disabling the video stream on the host isn't good enough as
the coming video frame will still arrive.

This CL fixes the crash by destroying the OpenGL context when the app
becomes inactive, and recreates the context when the app becomes active
again.

Note that even after we fix the crash, the session will still be
disconnected, since the app will eventually enter the Suspended state
and stop processing network events. See link about an iOS app's
lifecycle:
https://developer.apple.com/library/content/documentation/iPhone/Conceptual/iPhoneOSProgrammingGuide/TheAppLifeCycle/TheAppLifeCycle.html#//apple_ref/doc/uid/TP40007072-CH2-SW3

Bug: 829449
Change-Id: I507b8e2a856b3e019db99faff188bd5f312c5a51
Reviewed-on: https://chromium-review.googlesource.com/1013244
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551097}
Former-commit-id: 9e9ae0c6e74194ec58ca37477b3149fa94d01b95